--- a/src/main/webapp/users/courses/java8.xhtml
+++ b/src/main/webapp/users/courses/java8.xhtml
@@ -9,7 +9,7 @@
     <h:head>
         <title>Java 8</title>
     </h:head>
-    
+
     <h:body>
 
         <ui:composition template="./../../resources/basicTemplate.xhtml">
@@ -38,7 +38,7 @@
                         </p:submenu>
                     </p:menu>
                 </h:form>
-                
+
             </ui:define>
 
             <ui:define name="right">
@@ -51,32 +51,14 @@
             <ui:define name="content">
                 <p:accordionPanel id="lectures" value="#{java8Course.courseLectures}" var="lec">
                     <p:tab title="#{lec.title}">
-                        <h:panelGrid columns="2">
-                            <iframe width="560" height="315" src="//www.youtube.com/embed/#{lec.youtube}" frameborder="0"></iframe>
-                            <h:panelGrid>
-                                <h:form>
-                                    <p:commandButton value="Download Material" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);">
-                                        <p:fileDownload value="#{lec.material}"/>
-                                    </p:commandButton>
-                                </h:form>
-                                <script type="text/javascript">
-                                    function start() {
-                                        PF('statusDialog').show();
-                                    }
-
-                                    function stop() {
-                                        PF('statusDialog').hide();
-                                    }
-                                </script>
-                                <br/>
-
-                            </h:panelGrid>
-                        </h:panelGrid>
-
+                        <iframe width="560" height="315" src="//www.youtube.com/embed/#{lec.youtube}" frameborder="0"></iframe>
                     </p:tab>
-
                 </p:accordionPanel>
-                <p:button value="Take Test"/>
+                <h:form>
+                    <p:commandButton value="Download Additional Material" ajax="false">
+                        <p:fileDownload value="#{java8Course.file}" />
+                    </p:commandButton>
+                </h:form>
             </ui:define>
 
         </ui:composition>
